example/lib/src/generated/errors/errors_localization_ca.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Catalan Valencian (`ca`).
class ErrorsLocalizationCa extends ErrorsLocalization {
  ErrorsLocalizationCa([String locale = 'ca']) : super(locale);

  @override
  String get error => 'S\'ha produït un error';

  @override
  String get unexpectedError => 'S\'ha produït un error inesperat';

  @override
  String get bugReportSentText => 'Informe de bug enviat amb èxit.';
}
